--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="all.css">
 </head>
-<body>
+<body onclick="startScare()">
      <div class="scary-text">你有聽見聲音嗎？</div>
 
     <div class="jumpscare" id="jumpscare">
