--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <div class="jumpscare" id="jumpscare">
         <img src="joker.jpg" alt="Scary Face">
-        <audio id="scream" src="scream.mp3"></audio>
+        <audio id="horrorBgm" src="horrorBgm.mp3"></audio>
+        <audio id="laugh" src="laugh.mp3"></audio>
     </div>
 
     <script src="all.js"></script>
